sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:3: error: ';' expected but ',' found.
  ableau T, entier n
          ^